--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-pywebview
-winshell
-pywin32
-cefpython3
-open-webui
+aiohttp>=3.8.0
+pywebview>=4.0.0
+pydantic>=2.0.0
+pytest>=7.0.0
+pytest-asyncio>=0.21.0
+open-webui>=0.1.0
