--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-aiohttp>=3.8.0
-pywebview>=4.0.0
-pydantic>=2.0.0
-pytest>=7.0.0
-pytest-asyncio>=0.21.0
+aiohttp
+pywebview
+pydantic
+pytest
+pytest-asyncio
 open-webui
 winshell
